asin.output
Grammar

    0 $accept: programa $end

    1 $@1: /* empty */

    2 programa: $@1 secuenciaDeclaraciones

    3 secuenciaDeclaraciones: declaracion
    4                       | secuenciaDeclaraciones declaracion

    5 declaracion: declaracionVariable
    6            | declaracionFuncion

    7 declaracionVariable: tipo ID_ PUNTOYCOMA_
    8                    | tipo ID_ CORABR_ CTE_ CORCER_ PUNTOYCOMA_

    9 tipo: INT_
   10     | STRUCT_ LLAVABR_ listaCampos LLAVCER_

   11 listaCampos: declaracionVariable
   12            | listaCampos declaracionVariable

   13 declaracionFuncion: cabeceraFuncion bloque

   14 $@2: /* empty */

   15 cabeceraFuncion: tipo ID_ $@2 PARABR_ parametrosFormales PARCER_

   16 parametrosFormales: /* empty */
   17                   | listaParametrosFormales

   18 listaParametrosFormales: tipo ID_

   19 $@3: /* empty */

   20 listaParametrosFormales: tipo ID_ COMA_ $@3 listaParametrosFormales

   21 bloque: LLAVABR_ declaracionVariableLocal listaInstrucciones LLAVCER_

   22 declaracionVariableLocal: /* empty */
   23                         | declaracionVariableLocal declaracionVariable

   24 listaInstrucciones: /* empty */
   25                   | listaInstrucciones instruccion

   26 $@4: /* empty */

   27 instruccion: $@4 LLAVABR_ declaracionVariableLocal listaInstrucciones LLAVCER_
   28            | instruccionExpresion
   29            | instruccionEntradaSalida
   30            | instruccionSeleccion
   31            | instruccionIteraccion
   32            | instruccionSalto

   33 instruccionExpresion: PUNTOYCOMA_
   34                     | expresion PUNTOYCOMA_

   35 $@5: /* empty */

   36 instruccionEntradaSalida: READ_ PARABR_ ID_ $@5 PARCER_ PUNTOYCOMA_

   37 $@6: /* empty */

   38 instruccionEntradaSalida: PRINT_ PARABR_ expresion $@6 PARCER_ PUNTOYCOMA_

   39 @7: /* empty */

   40 @8: /* empty */

   41 instruccionSeleccion: IF_ PARABR_ expresion PARCER_ @7 instruccion @8 ELSE_ instruccion

   42 @9: /* empty */

   43 @10: /* empty */

   44 @11: /* empty */

   45 instruccionIteraccion: FOR_ PARABR_ expresionOpcional PUNTOYCOMA_ @9 expresion PUNTOYCOMA_ @10 expresionOpcional PARCER_ @11 instruccion

   46 expresionOpcional: /* empty */
   47                  | expresion

   48 instruccionSalto: RETURN_ expresion PUNTOYCOMA_

   49 expresion: expresionIgualdad
   50          | ID_ operadorAsignacion expresion
   51          | ID_ CORABR_ expresion CORCER_ operadorAsignacion expresion
   52          | ID_ PUNTO_ ID_ operadorAsignacion expresion

   53 expresionIgualdad: expresionRelacional
   54                  | expresionIgualdad operadorIgualdad expresionRelacional

   55 expresionRelacional: expresionAditiva
   56                    | expresionRelacional operadorRelacional expresionAditiva

   57 expresionAditiva: expresionMultiplicativa
   58                 | expresionAditiva operadorAditivo expresionMultiplicativa

   59 expresionMultiplicativa: expresionUnaria
   60                        | expresionMultiplicativa operadorMultiplicativo expresionUnaria

   61 expresionUnaria: expresionSufija
   62                | operadorUnario expresionUnaria
   63                | operadorIncremento ID_

   64 expresionSufija: ID_ CORABR_ expresion CORCER_
   65                | ID_ PUNTO_ ID_
   66                | ID_ operadorIncremento
   67                | ID_ PARABR_ parametrosActuales PARCER_
   68                | PARABR_ expresion PARCER_
   69                | ID_
   70                | CTE_

   71 parametrosActuales: /* empty */
   72                   | listaParametrosActuales

   73 listaParametrosActuales: expresion
   74                        | expresion COMA_ listaParametrosActuales

   75 operadorAsignacion: ASIG_
   76                   | ASIGMAS_
   77                   | ASIGMENOS_

   78 operadorIgualdad: IGUAL_
   79                 | DIF_

   80 operadorRelacional: GT_
   81                   | GTE_
   82                   | LT_
   83                   | LTE_

   84 operadorAditivo: MAS_
   85                | MENOS_

   86 operadorMultiplicativo: POR_
   87                       | DIV_

   88 operadorIncremento: INCMAS_
   89                   | INCMENOS_

   90 operadorUnario: MAS_
   91               | MENOS_


Terminals, with rules where they appear

$end (0) 0
error (256)
PUNTOYCOMA_ (258) 7 8 33 34 36 38 45 48
PUNTO_ (259) 52 65
COMA_ (260) 20 74
PARABR_ (261) 15 36 38 41 45 67 68
PARCER_ (262) 15 36 38 41 45 67 68
LLAVABR_ (263) 10 21 27
LLAVCER_ (264) 10 21 27
CORABR_ (265) 8 51 64
CORCER_ (266) 8 51 64
INT_ (267) 9
STRUCT_ (268) 10
READ_ (269) 36
PRINT_ (270) 38
IF_ (271) 41
ELSE_ (272) 41
FOR_ (273) 45
RETURN_ (274) 48
MAS_ (275) 84 90
POR_ (276) 86
MENOS_ (277) 85 91
DIV_ (278) 87
INCMAS_ (279) 88
INCMENOS_ (280) 89
ASIG_ (281) 75
ASIGMAS_ (282) 76
ASIGMENOS_ (283) 77
IGUAL_ (284) 78
DIF_ (285) 79
GT_ (286) 80
GTE_ (287) 81
LT_ (288) 82
LTE_ (289) 83
ID_ (290) 7 8 15 18 20 36 50 51 52 63 64 65 66 67 69
CTE_ (291) 8 70


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
programa (38)
    on left: 2, on right: 0
$@1 (39)
    on left: 1, on right: 2
secuenciaDeclaraciones (40)
    on left: 3 4, on right: 2 4
declaracion (41)
    on left: 5 6, on right: 3 4
declaracionVariable (42)
    on left: 7 8, on right: 5 11 12 23
tipo (43)
    on left: 9 10, on right: 7 8 15 18 20
listaCampos (44)
    on left: 11 12, on right: 10 12
declaracionFuncion (45)
    on left: 13, on right: 6
cabeceraFuncion (46)
    on left: 15, on right: 13
$@2 (47)
    on left: 14, on right: 15
parametrosFormales (48)
    on left: 16 17, on right: 15
listaParametrosFormales (49)
    on left: 18 20, on right: 17 20
$@3 (50)
    on left: 19, on right: 20
bloque (51)
    on left: 21, on right: 13
declaracionVariableLocal (52)
    on left: 22 23, on right: 21 23 27
listaInstrucciones (53)
    on left: 24 25, on right: 21 25 27
instruccion (54)
    on left: 27 28 29 30 31 32, on right: 25 41 45
$@4 (55)
    on left: 26, on right: 27
instruccionExpresion (56)
    on left: 33 34, on right: 28
instruccionEntradaSalida (57)
    on left: 36 38, on right: 29
$@5 (58)
    on left: 35, on right: 36
$@6 (59)
    on left: 37, on right: 38
instruccionSeleccion (60)
    on left: 41, on right: 30
@7 (61)
    on left: 39, on right: 41
@8 (62)
    on left: 40, on right: 41
instruccionIteraccion (63)
    on left: 45, on right: 31
@9 (64)
    on left: 42, on right: 45
@10 (65)
    on left: 43, on right: 45
@11 (66)
    on left: 44, on right: 45
expresionOpcional (67)
    on left: 46 47, on right: 45
instruccionSalto (68)
    on left: 48, on right: 32
expresion (69)
    on left: 49 50 51 52, on right: 34 38 41 45 47 48 50 51 52 64 68
    73 74
expresionIgualdad (70)
    on left: 53 54, on right: 49 54
expresionRelacional (71)
    on left: 55 56, on right: 53 54 56
expresionAditiva (72)
    on left: 57 58, on right: 55 56 58
expresionMultiplicativa (73)
    on left: 59 60, on right: 57 58 60
expresionUnaria (74)
    on left: 61 62 63, on right: 59 60 62
expresionSufija (75)
    on left: 64 65 66 67 68 69 70, on right: 61
parametrosActuales (76)
    on left: 71 72, on right: 67
listaParametrosActuales (77)
    on left: 73 74, on right: 72 74
operadorAsignacion (78)
    on left: 75 76 77, on right: 50 51 52
operadorIgualdad (79)
    on left: 78 79, on right: 54
operadorRelacional (80)
    on left: 80 81 82 83, on right: 56
operadorAditivo (81)
    on left: 84 85, on right: 58
operadorMultiplicativo (82)
    on left: 86 87, on right: 60
operadorIncremento (83)
    on left: 88 89, on right: 63 66
operadorUnario (84)
    on left: 90 91, on right: 62


state 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    2 programa: $@1 . secuenciaDeclaraciones

    INT_     shift, and go to state 4
    STRUCT_  shift, and go to state 5

    secuenciaDeclaraciones  go to state 6
    declaracion             go to state 7
    declaracionVariable     go to state 8
    tipo                    go to state 9
    declaracionFuncion      go to state 10
    cabeceraFuncion         go to state 11


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    9 tipo: INT_ .

    $default  reduce using rule 9 (tipo)


state 5

   10 tipo: STRUCT_ . LLAVABR_ listaCampos LLAVCER_

    LLAVABR_  shift, and go to state 12


state 6

    2 programa: $@1 secuenciaDeclaraciones .
    4 secuenciaDeclaraciones: secuenciaDeclaraciones . declaracion

    INT_     shift, and go to state 4
    STRUCT_  shift, and go to state 5

    $default  reduce using rule 2 (programa)

    declaracion          go to state 13
    declaracionVariable  go to state 8
    tipo                 go to state 9
    declaracionFuncion   go to state 10
    cabeceraFuncion      go to state 11


state 7

    3 secuenciaDeclaraciones: declaracion .

    $default  reduce using rule 3 (secuenciaDeclaraciones)


state 8

    5 declaracion: declaracionVariable .

    $default  reduce using rule 5 (declaracion)


state 9

    7 declaracionVariable: tipo . ID_ PUNTOYCOMA_
    8                    | tipo . ID_ CORABR_ CTE_ CORCER_ PUNTOYCOMA_
   15 cabeceraFuncion: tipo . ID_ $@2 PARABR_ parametrosFormales PARCER_

    ID_  shift, and go to state 14


state 10

    6 declaracion: declaracionFuncion .

    $default  reduce using rule 6 (declaracion)


state 11

   13 declaracionFuncion: cabeceraFuncion . bloque

    LLAVABR_  shift, and go to state 15

    bloque  go to state 16


state 12

   10 tipo: STRUCT_ LLAVABR_ . listaCampos LLAVCER_

    INT_     shift, and go to state 4
    STRUCT_  shift, and go to state 5

    declaracionVariable  go to state 17
    tipo                 go to state 18
    listaCampos          go to state 19


state 13

    4 secuenciaDeclaraciones: secuenciaDeclaraciones declaracion .

    $default  reduce using rule 4 (secuenciaDeclaraciones)


state 14

    7 declaracionVariable: tipo ID_ . PUNTOYCOMA_
    8                    | tipo ID_ . CORABR_ CTE_ CORCER_ PUNTOYCOMA_
   15 cabeceraFuncion: tipo ID_ . $@2 PARABR_ parametrosFormales PARCER_

    PUNTOYCOMA_  shift, and go to state 20
    CORABR_      shift, and go to state 21

    $default  reduce using rule 14 ($@2)

    $@2  go to state 22


state 15

   21 bloque: LLAVABR_ . declaracionVariableLocal listaInstrucciones LLAVCER_

    $default  reduce using rule 22 (declaracionVariableLocal)

    declaracionVariableLocal  go to state 23


state 16

   13 declaracionFuncion: cabeceraFuncion bloque .

    $default  reduce using rule 13 (declaracionFuncion)


state 17

   11 listaCampos: declaracionVariable .

    $default  reduce using rule 11 (listaCampos)


state 18

    7 declaracionVariable: tipo . ID_ PUNTOYCOMA_
    8                    | tipo . ID_ CORABR_ CTE_ CORCER_ PUNTOYCOMA_

    ID_  shift, and go to state 24


state 19

   10 tipo: STRUCT_ LLAVABR_ listaCampos . LLAVCER_
   12 listaCampos: listaCampos . declaracionVariable

    LLAVCER_  shift, and go to state 25
    INT_      shift, and go to state 4
    STRUCT_   shift, and go to state 5

    declaracionVariable  go to state 26
    tipo                 go to state 18


state 20

    7 declaracionVariable: tipo ID_ PUNTOYCOMA_ .

    $default  reduce using rule 7 (declaracionVariable)


state 21

    8 declaracionVariable: tipo ID_ CORABR_ . CTE_ CORCER_ PUNTOYCOMA_

    CTE_  shift, and go to state 27


state 22

   15 cabeceraFuncion: tipo ID_ $@2 . PARABR_ parametrosFormales PARCER_

    PARABR_  shift, and go to state 28


state 23

   21 bloque: LLAVABR_ declaracionVariableLocal . listaInstrucciones LLAVCER_
   23 declaracionVariableLocal: declaracionVariableLocal . declaracionVariable

    INT_     shift, and go to state 4
    STRUCT_  shift, and go to state 5

    $default  reduce using rule 24 (listaInstrucciones)

    declaracionVariable  go to state 29
    tipo                 go to state 18
    listaInstrucciones   go to state 30


state 24

    7 declaracionVariable: tipo ID_ . PUNTOYCOMA_
    8                    | tipo ID_ . CORABR_ CTE_ CORCER_ PUNTOYCOMA_

    PUNTOYCOMA_  shift, and go to state 20
    CORABR_      shift, and go to state 21


state 25

   10 tipo: STRUCT_ LLAVABR_ listaCampos LLAVCER_ .

    $default  reduce using rule 10 (tipo)


state 26

   12 listaCampos: listaCampos declaracionVariable .

    $default  reduce using rule 12 (listaCampos)


state 27

    8 declaracionVariable: tipo ID_ CORABR_ CTE_ . CORCER_ PUNTOYCOMA_

    CORCER_  shift, and go to state 31


state 28

   15 cabeceraFuncion: tipo ID_ $@2 PARABR_ . parametrosFormales PARCER_

    INT_     shift, and go to state 4
    STRUCT_  shift, and go to state 5

    $default  reduce using rule 16 (parametrosFormales)

    tipo                     go to state 32
    parametrosFormales       go to state 33
    listaParametrosFormales  go to state 34


state 29

   23 declaracionVariableLocal: declaracionVariableLocal declaracionVariable .

    $default  reduce using rule 23 (declaracionVariableLocal)


state 30

   21 bloque: LLAVABR_ declaracionVariableLocal listaInstrucciones . LLAVCER_
   25 listaInstrucciones: listaInstrucciones . instruccion

    PUNTOYCOMA_  shift, and go to state 35
    PARABR_      shift, and go to state 36
    LLAVCER_     shift, and go to state 37
    READ_        shift, and go to state 38
    PRINT_       shift, and go to state 39
    IF_          shift, and go to state 40
    FOR_         shift, and go to state 41
    RETURN_      shift, and go to state 42
    MAS_         shift, and go to state 43
    MENOS_       shift, and go to state 44
    INCMAS_      shift, and go to state 45
    INCMENOS_    shift, and go to state 46
    ID_          shift, and go to state 47
    CTE_         shift, and go to state 48

    $default  reduce using rule 26 ($@4)

    instruccion               go to state 49
    $@4                       go to state 50
    instruccionExpresion      go to state 51
    instruccionEntradaSalida  go to state 52
    instruccionSeleccion      go to state 53
    instruccionIteraccion     go to state 54
    instruccionSalto          go to state 55
    expresion                 go to state 56
    expresionIgualdad         go to state 57
    expresionRelacional       go to state 58
    expresionAditiva          go to state 59
    expresionMultiplicativa   go to state 60
    expresionUnaria           go to state 61
    expresionSufija           go to state 62
    operadorIncremento        go to state 63
    operadorUnario            go to state 64


state 31

    8 declaracionVariable: tipo ID_ CORABR_ CTE_ CORCER_ . PUNTOYCOMA_

    PUNTOYCOMA_  shift, and go to state 65


state 32

   18 listaParametrosFormales: tipo . ID_
   20                        | tipo . ID_ COMA_ $@3 listaParametrosFormales

    ID_  shift, and go to state 66


state 33

   15 cabeceraFuncion: tipo ID_ $@2 PARABR_ parametrosFormales . PARCER_

    PARCER_  shift, and go to state 67


state 34

   17 parametrosFormales: listaParametrosFormales .

    $default  reduce using rule 17 (parametrosFormales)


state 35

   33 instruccionExpresion: PUNTOYCOMA_ .

    $default  reduce using rule 33 (instruccionExpresion)


state 36

   68 expresionSufija: PARABR_ . expresion PARCER_

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    expresion                go to state 68
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 37

   21 bloque: LLAVABR_ declaracionVariableLocal listaInstrucciones LLAVCER_ .

    $default  reduce using rule 21 (bloque)


state 38

   36 instruccionEntradaSalida: READ_ . PARABR_ ID_ $@5 PARCER_ PUNTOYCOMA_

    PARABR_  shift, and go to state 69


state 39

   38 instruccionEntradaSalida: PRINT_ . PARABR_ expresion $@6 PARCER_ PUNTOYCOMA_

    PARABR_  shift, and go to state 70


state 40

   41 instruccionSeleccion: IF_ . PARABR_ expresion PARCER_ @7 instruccion @8 ELSE_ instruccion

    PARABR_  shift, and go to state 71


state 41

   45 instruccionIteraccion: FOR_ . PARABR_ expresionOpcional PUNTOYCOMA_ @9 expresion PUNTOYCOMA_ @10 expresionOpcional PARCER_ @11 instruccion

    PARABR_  shift, and go to state 72


state 42

   48 instruccionSalto: RETURN_ . expresion PUNTOYCOMA_

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    expresion                go to state 73
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 43

   90 operadorUnario: MAS_ .

    $default  reduce using rule 90 (operadorUnario)


state 44

   91 operadorUnario: MENOS_ .

    $default  reduce using rule 91 (operadorUnario)


state 45

   88 operadorIncremento: INCMAS_ .

    $default  reduce using rule 88 (operadorIncremento)


state 46

   89 operadorIncremento: INCMENOS_ .

    $default  reduce using rule 89 (operadorIncremento)


state 47

   50 expresion: ID_ . operadorAsignacion expresion
   51          | ID_ . CORABR_ expresion CORCER_ operadorAsignacion expresion
   52          | ID_ . PUNTO_ ID_ operadorAsignacion expresion
   64 expresionSufija: ID_ . CORABR_ expresion CORCER_
   65                | ID_ . PUNTO_ ID_
   66                | ID_ . operadorIncremento
   67                | ID_ . PARABR_ parametrosActuales PARCER_
   69                | ID_ .

    PUNTO_      shift, and go to state 74
    PARABR_     shift, and go to state 75
    CORABR_     shift, and go to state 76
    INCMAS_     shift, and go to state 45
    INCMENOS_   shift, and go to state 46
    ASIG_       shift, and go to state 77
    ASIGMAS_    shift, and go to state 78
    ASIGMENOS_  shift, and go to state 79

    $default  reduce using rule 69 (expresionSufija)

    operadorAsignacion  go to state 80
    operadorIncremento  go to state 81


state 48

   70 expresionSufija: CTE_ .

    $default  reduce using rule 70 (expresionSufija)


state 49

   25 listaInstrucciones: listaInstrucciones instruccion .

    $default  reduce using rule 25 (listaInstrucciones)


state 50

   27 instruccion: $@4 . LLAVABR_ declaracionVariableLocal listaInstrucciones LLAVCER_

    LLAVABR_  shift, and go to state 82


state 51

   28 instruccion: instruccionExpresion .

    $default  reduce using rule 28 (instruccion)


state 52

   29 instruccion: instruccionEntradaSalida .

    $default  reduce using rule 29 (instruccion)


state 53

   30 instruccion: instruccionSeleccion .

    $default  reduce using rule 30 (instruccion)


state 54

   31 instruccion: instruccionIteraccion .

    $default  reduce using rule 31 (instruccion)


state 55

   32 instruccion: instruccionSalto .

    $default  reduce using rule 32 (instruccion)


state 56

   34 instruccionExpresion: expresion . PUNTOYCOMA_

    PUNTOYCOMA_  shift, and go to state 83


state 57

   49 expresion: expresionIgualdad .
   54 expresionIgualdad: expresionIgualdad . operadorIgualdad expresionRelacional

    IGUAL_  shift, and go to state 84
    DIF_    shift, and go to state 85

    $default  reduce using rule 49 (expresion)

    operadorIgualdad  go to state 86


state 58

   53 expresionIgualdad: expresionRelacional .
   56 expresionRelacional: expresionRelacional . operadorRelacional expresionAditiva

    GT_   shift, and go to state 87
    GTE_  shift, and go to state 88
    LT_   shift, and go to state 89
    LTE_  shift, and go to state 90

    $default  reduce using rule 53 (expresionIgualdad)

    operadorRelacional  go to state 91


state 59

   55 expresionRelacional: expresionAditiva .
   58 expresionAditiva: expresionAditiva . operadorAditivo expresionMultiplicativa

    MAS_    shift, and go to state 92
    MENOS_  shift, and go to state 93

    $default  reduce using rule 55 (expresionRelacional)

    operadorAditivo  go to state 94


state 60

   57 expresionAditiva: expresionMultiplicativa .
   60 expresionMultiplicativa: expresionMultiplicativa . operadorMultiplicativo expresionUnaria

    POR_  shift, and go to state 95
    DIV_  shift, and go to state 96

    $default  reduce using rule 57 (expresionAditiva)

    operadorMultiplicativo  go to state 97


state 61

   59 expresionMultiplicativa: expresionUnaria .

    $default  reduce using rule 59 (expresionMultiplicativa)


state 62

   61 expresionUnaria: expresionSufija .

    $default  reduce using rule 61 (expresionUnaria)


state 63

   63 expresionUnaria: operadorIncremento . ID_

    ID_  shift, and go to state 98


state 64

   62 expresionUnaria: operadorUnario . expresionUnaria

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 99
    CTE_       shift, and go to state 48

    expresionUnaria     go to state 100
    expresionSufija     go to state 62
    operadorIncremento  go to state 63
    operadorUnario      go to state 64


state 65

    8 declaracionVariable: tipo ID_ CORABR_ CTE_ CORCER_ PUNTOYCOMA_ .

    $default  reduce using rule 8 (declaracionVariable)


state 66

   18 listaParametrosFormales: tipo ID_ .
   20                        | tipo ID_ . COMA_ $@3 listaParametrosFormales

    COMA_  shift, and go to state 101

    $default  reduce using rule 18 (listaParametrosFormales)


state 67

   15 cabeceraFuncion: tipo ID_ $@2 PARABR_ parametrosFormales PARCER_ .

    $default  reduce using rule 15 (cabeceraFuncion)


state 68

   68 expresionSufija: PARABR_ expresion . PARCER_

    PARCER_  shift, and go to state 102


state 69

   36 instruccionEntradaSalida: READ_ PARABR_ . ID_ $@5 PARCER_ PUNTOYCOMA_

    ID_  shift, and go to state 103


state 70

   38 instruccionEntradaSalida: PRINT_ PARABR_ . expresion $@6 PARCER_ PUNTOYCOMA_

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    expresion                go to state 104
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 71

   41 instruccionSeleccion: IF_ PARABR_ . expresion PARCER_ @7 instruccion @8 ELSE_ instruccion

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    expresion                go to state 105
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 72

   45 instruccionIteraccion: FOR_ PARABR_ . expresionOpcional PUNTOYCOMA_ @9 expresion PUNTOYCOMA_ @10 expresionOpcional PARCER_ @11 instruccion

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    $default  reduce using rule 46 (expresionOpcional)

    expresionOpcional        go to state 106
    expresion                go to state 107
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 73

   48 instruccionSalto: RETURN_ expresion . PUNTOYCOMA_

    PUNTOYCOMA_  shift, and go to state 108


state 74

   52 expresion: ID_ PUNTO_ . ID_ operadorAsignacion expresion
   65 expresionSufija: ID_ PUNTO_ . ID_

    ID_  shift, and go to state 109


state 75

   67 expresionSufija: ID_ PARABR_ . parametrosActuales PARCER_

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    $default  reduce using rule 71 (parametrosActuales)

    expresion                go to state 110
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    parametrosActuales       go to state 111
    listaParametrosActuales  go to state 112
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 76

   51 expresion: ID_ CORABR_ . expresion CORCER_ operadorAsignacion expresion
   64 expresionSufija: ID_ CORABR_ . expresion CORCER_

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    expresion                go to state 113
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 77

   75 operadorAsignacion: ASIG_ .

    $default  reduce using rule 75 (operadorAsignacion)


state 78

   76 operadorAsignacion: ASIGMAS_ .

    $default  reduce using rule 76 (operadorAsignacion)


state 79

   77 operadorAsignacion: ASIGMENOS_ .

    $default  reduce using rule 77 (operadorAsignacion)


state 80

   50 expresion: ID_ operadorAsignacion . expresion

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 47
    CTE_       shift, and go to state 48

    expresion                go to state 114
    expresionIgualdad        go to state 57
    expresionRelacional      go to state 58
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 81

   66 expresionSufija: ID_ operadorIncremento .

    $default  reduce using rule 66 (expresionSufija)


state 82

   27 instruccion: $@4 LLAVABR_ . declaracionVariableLocal listaInstrucciones LLAVCER_

    $default  reduce using rule 22 (declaracionVariableLocal)

    declaracionVariableLocal  go to state 115


state 83

   34 instruccionExpresion: expresion PUNTOYCOMA_ .

    $default  reduce using rule 34 (instruccionExpresion)


state 84

   78 operadorIgualdad: IGUAL_ .

    $default  reduce using rule 78 (operadorIgualdad)


state 85

   79 operadorIgualdad: DIF_ .

    $default  reduce using rule 79 (operadorIgualdad)


state 86

   54 expresionIgualdad: expresionIgualdad operadorIgualdad . expresionRelacional

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 99
    CTE_       shift, and go to state 48

    expresionRelacional      go to state 116
    expresionAditiva         go to state 59
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 87

   80 operadorRelacional: GT_ .

    $default  reduce using rule 80 (operadorRelacional)


state 88

   81 operadorRelacional: GTE_ .

    $default  reduce using rule 81 (operadorRelacional)


state 89

   82 operadorRelacional: LT_ .

    $default  reduce using rule 82 (operadorRelacional)


state 90

   83 operadorRelacional: LTE_ .

    $default  reduce using rule 83 (operadorRelacional)


state 91

   56 expresionRelacional: expresionRelacional operadorRelacional . expresionAditiva

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 99
    CTE_       shift, and go to state 48

    expresionAditiva         go to state 117
    expresionMultiplicativa  go to state 60
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 92

   84 operadorAditivo: MAS_ .

    $default  reduce using rule 84 (operadorAditivo)


state 93

   85 operadorAditivo: MENOS_ .

    $default  reduce using rule 85 (operadorAditivo)


state 94

   58 expresionAditiva: expresionAditiva operadorAditivo . expresionMultiplicativa

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 99
    CTE_       shift, and go to state 48

    expresionMultiplicativa  go to state 118
    expresionUnaria          go to state 61
    expresionSufija          go to state 62
    operadorIncremento       go to state 63
    operadorUnario           go to state 64


state 95

   86 operadorMultiplicativo: POR_ .

    $default  reduce using rule 86 (operadorMultiplicativo)


state 96

   87 operadorMultiplicativo: DIV_ .

    $default  reduce using rule 87 (operadorMultiplicativo)


state 97

   60 expresionMultiplicativa: expresionMultiplicativa operadorMultiplicativo . expresionUnaria

    PARABR_    shift, and go to state 36
    MAS_       shift, and go to state 43
    MENOS_     shift, and go to state 44
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46
    ID_        shift, and go to state 99
    CTE_       shift, and go to state 48

    expresionUnaria     go to state 119
    expresionSufija     go to state 62
    operadorIncremento  go to state 63
    operadorUnario      go to state 64


state 98

   63 expresionUnaria: operadorIncremento ID_ .

    $default  reduce using rule 63 (expresionUnaria)


state 99

   64 expresionSufija: ID_ . CORABR_ expresion CORCER_
   65                | ID_ . PUNTO_ ID_
   66                | ID_ . operadorIncremento
   67                | ID_ . PARABR_ parametrosActuales PARCER_
   69                | ID_ .

    PUNTO_     shift, and go to state 120
    PARABR_    shift, and go to state 75
    CORABR_    shift, and go to state 121
    INCMAS_    shift, and go to state 45
    INCMENOS_  shift, and go to state 46

    $default  reduce using rule 69 (expresionSufija)

    operadorIncremento  go to state 81


state 100

   62 expresionUnaria: operadorUnario expresionUnaria .

    $default  reduce using rule 62 (expresionUnaria)


state 101

   20 listaParametrosFormales: tipo ID_ COMA_ . $@3 listaParametrosFormales

    $default  reduce using rule 19 ($@3)

    $@3  go to state 122


state 102

   68 expresionSufija: PARABR_ expresion PARCER_ .

    $default  reduce using rule 68 (expresionSufija)


state 103

   36 instruccionEntradaSalida: READ_ PARABR_ ID_ . $@5 PARCER_ PUNTOYCOMA_
